--- a/ta_sample/src/main/res/menu/menu_main_tabs.xml
+++ b/ta_sample/src/main/res/menu/menu_main_tabs.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2016, marlonlom
   ~
@@ -14,6 +16,7 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
+
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
