--- a/ta_sample/src/main/res/values-night/themes.xml
+++ b/ta_sample/src/main/res/values-night/themes.xml
@@ -16,10 +16,11 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
+
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+  <!-- Base application theme. -->
+  <style name="Base.Theme.Timeago" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Customize your dark theme here. -->
+    <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+  </style>
 </resources>
