--- a/ta_sample/src/main/res/values/colors.xml
+++ b/ta_sample/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
   ~ Copyright (c) 2016, marlonlom
   ~
   ~ Licensed under the Apache License, Version 2.0 (the
@@ -16,7 +18,7 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#FF5722</color>
+  <color name="colorPrimary">#FF2196F3</color>
+  <color name="colorPrimaryDark">#FF1976D2</color>
+  <color name="colorAccent">#FFFF5722</color>
 </resources>
