--- a/ta_sample/src/main/res/values/themes.xml
+++ b/ta_sample/src/main/res/values/themes.xml
@@ -16,10 +16,20 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
+
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+  <!-- Base application theme. -->
+  <style name="Base.Theme.Timeago" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Customize your light theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+  </style>
+
+  <style name="Theme.Timeago" parent="Base.Theme.Timeago" />
+
+  <style name="Theme.Timeago.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+  <style name="Theme.Timeago.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
