--- a/ta_sample/src/main/res/values-sw600dp/dimens.xml
+++ b/ta_sample/src/main/res/values-sw600dp/dimens.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources>
-  <!--background color for launcher icon-->
-  <color name="ic_launcher_background">#FFF5FAFD</color>
+    <!-- Example customization of dimensions originally defined in res/values/dimens.xml
+         (such as screen margins) for screens with more than 820dp of available width. This
+         would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
+    <dimen name="activity_horizontal_margin">64dp</dimen>
 </resources>
